--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="bootstrap2.html"><h3>Рекомендації від мене</h3></a></li>
+                <li class="nav-item"><a class="nav-link" href="My_recomendation.html"><h3>Рекомендації від мене</h3></a></li>
             </ul>
         </div>
 
