--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="bootstrap.css">
     <meta charset="utf-8">
+    <title>World_of_films</title>
   </head>
   <body>
-<!--НАвбар--->
+    
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
 
-          <a class="navbar-brand"<h1>Світ Кіно</h1></a>
+          <div class="navbar-brand"><h1>Світ Кіно</h1></div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,15 +39,15 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="iron3.jpg" class="d-block w-100">
+      <img src="iron3.jpg" class="d-block w-100" alt="ironman">
     </div>
 
     <div class="carousel-item">
-      <img src="gentle.jpg" class="d-block w-100">
+      <img src="gentle.jpg" class="d-block w-100" alt="gentlemen">
     </div>
 
     <div class="carousel-item">
-      <img src="wolk.jpg" class="d-block w-100">
+      <img src="wolk.jpg" class="d-block w-100" alt="WolfonWallstreet">
     </div>
 
   </div>
