--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
 
-          <div class="navbar-brand"><h1>Світ Кіно</h1></div>
+          <div class="navbar-brand">Світ Кіно</div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
