--- a/My_recomendation.html
+++ b/My_recomendation.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ua" dir="ltr">
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="bootstrap.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>My_recomendation</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
@@ -27,7 +27,7 @@
    <!--Дороби контейнер, шоб воно норм виводилось (сповзало на сторінкі ) -->
 <div class="film1">
   <div class="card" style="width: 50rem;">
-  <img src="суддя.webp" class="card-img-top">
+  <img src="суддя.webp" class="card-img-top" alt="judge">
   <div class="card-body">
     <h5 class="card-title">Суддя</h5>
     <p class="card-text">
@@ -48,7 +48,7 @@
 
 <div class="film2">
   <div class="card" style="width: 50rem;">
-  <img src="совість2.jpg" class="card-img-top">
+  <img src="совість2.jpg" class="card-img-top" alt="conscience">
   <div class="card-body">
     <h5 class="card-title">З міркувань совісті </h5>
     <p class="card-text">
@@ -64,7 +64,7 @@
 
 <div class="film3">
   <div class="card" style="width: 50rem;">
-  <img src="вільний.jpg" class="card-img-top">
+  <img src="вільний.jpg" class="card-img-top" alt="freedomman">
   <div class="card-body">
     <h5 class="card-title">Джанго вільний </h5>
     <p class="card-text">
